--- a/Sequelize-Passport-Example/public/login.html
+++ b/Sequelize-Passport-Example/public/login.html
@@ -22,9 +22,8 @@
           <li class="menu-text">Send Moods</li>
           <li>
             <ul class="menu">
-              <li><a href="index.html">Log In</a></li>
-              <li><a href="#">Two</a></li>
-              <li><a href="#">Three</a></li>
+              <li><a href="index.html">Sign Up</a></li>
+              <li><a href="#">Log In</a></li>
             </ul>
           </li>
         </ul>
@@ -34,7 +33,7 @@
       <div class="row collapse expanded">
         <div class="small-12 medium-6 column small-order-2 medium-order-1">
           <div class="login-box-form-section">
-            <h1 class="login-box-title">Sign up or log In</h1>
+            <h1 class="login-box-title">log In</h1>
             <input
               class="login-box-input"
               type="text"
@@ -43,28 +42,11 @@
             />
             <input
               class="login-box-input"
-              type="email"
-              name="email"
-              placeholder="E-mail"
-            />
-            <input
-              class="login-box-input"
               type="password"
               name="password"
               placeholder="Password"
             />
-            <input
-              class="login-box-input"
-              type="password"
-              name="password2"
-              placeholder="Retype password"
-            />
-            <input
-              class="login-box-submit-button"
-              type="submit"
-              name="signup_submit"
-              value="Sign me up"
-            />
+            
             <input
               class="login-box-submit-button"
               type="submit"
@@ -79,7 +61,7 @@
         >
           <div class="login-box-social-section-inner">
             <span class="login-box-social-headline"
-              >Sign in with<br />your social network</span
+              >Log in with<br />your social network</span
             >
             <a class="login-box-social-button-facebook">Log in with facebook</a>
             <a class="login-box-social-button-twitter">Log in with Twitter</a>
