changes to the main.html and css for box grid setup

--- a/public/main.html
+++ b/public/main.html
@@ -31,14 +31,14 @@
     </div>
     
     <div class="header-grid">
-        <div id="b1" class="block"></div>
-        <div id="b2" class="block"></div>
-        <div id="b3" class="block"></div>
-        <div id="b4" class="block"></div>
+        <div id="b1" class="block">Ambient Medative</div>
+        <div id="b2" class="block">High Energy Focus</div>
+        <div id="b3" class="block">High Intensity Workout</div>
+        <div id="b4" class="block">Coding time</div>
         <div class="bottom-block">
-          <div id="b5" class="block"></div>
-          <div id="b6" class="block"></div>
-          <div id="b7" class="block"></div>
+          <div id="b5" class="block">Party it Up!</div>
+          <div id="b6" class="block">Slow Jams</div>
+          <div id="b7" class="block">Make Your Own</div>
         </div>
         
       </div>
