--- a/public/main.html
+++ b/public/main.html
@@ -19,9 +19,8 @@
         <li class="menu-text">Send Moods</li>
         <li>
           <ul class="menu">
-            <li><a href="index.html">Log In</a></li>
-            <li><a href="#">Two</a></li>
-            <li><a href="#">Three</a></li>
+            <li><a href="index.html">Sign Up</a></li>
+            <li><a href="#">Log In</a></li>
           </ul>
         </li>
       </ul>
