--- a/public/playpage.html
+++ b/public/playpage.html
@@ -257,7 +257,7 @@
       </div>
 
       <div class="holy-grail-footer">
-        <h3>Sound Track</h3>
+        <iframe src="https://open.spotify.com/embed/album/1DFixLWuPkv3KT3TnV35m3" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
       </div>
     </div>
     
