--- a/public/signup.html
+++ b/public/signup.html
@@ -62,7 +62,7 @@
               class="login-box-input"
               type="email"
               name="email"
-              placeholder="E-mail"
+              placeholder="email"
             />
             <input
               class="login-box-input"
@@ -103,11 +103,9 @@
 
     <!-- Compressed JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
-      integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
+    
+   
     <script src="js/signup.js" type="text/javascript"></script>
   </body>
 </html>
