--- a/public/playpage.html
+++ b/public/playpage.html
@@ -44,9 +44,8 @@
           <li class="menu-text">Send Moods</li>
           <li>
             <ul class="menu">
-              <li><a href="#">Log In</a></li>
-              <li><a href="#">Two</a></li>
-              <li><a href="#">Three</a></li>
+              <li><a href="login.html">Log In</a></li>
+              <li><a href="signup.html">Sign Up</a></li>
             </ul>
           </li>
         </ul>
@@ -67,9 +66,9 @@
         <hr>
         <div class="card rating">
           <div class="card-section">
-            <p class="ratings-card-header">Rate the movie Inception</p>
+            <p class="ratings-card-header">Rate the playlist</p>
             <div class="rating-block">
-              <p class="ratings-type">Action</p>
+              <p class="ratings-type"></p>
               <div class="rating-block-rating" data-rating>
                 <div class="star">
                   <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
@@ -99,7 +98,7 @@
               </div>
             </div>
             <div class="rating-block">
-              <p class="ratings-type">Story</p>
+              <p class="ratings-type">Songs in hte Playlist</p>
               <div class="rating-block-rating" data-rating>
                 <div class="star">
                   <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
@@ -129,7 +128,7 @@
               </div>
             </div>
             <div class="rating-block">
-              <p class="ratings-type">Relatability</p>
+              <p class="ratings-type">Visuals</p>
               <div class="rating-block-rating" data-rating>
                 <div class="star">
                   <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
@@ -159,7 +158,7 @@
               </div>
             </div>
             <div class="rating-block">
-              <p class="ratings-type">Performers</p>
+              <p class="ratings-type">How the Plalist made you feel</p>
               <div class="rating-block-rating" data-rating>
                 <div class="star">
                   <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
@@ -189,7 +188,7 @@
               </div>
             </div>
             <div class="rating-block">
-              <p class="ratings-type">Production</p>
+              <p class="ratings-type">Help with focus/production</p>
               <div class="rating-block-rating" data-rating>
                 <div class="star">
                   <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
