--- a/public/signup.html
+++ b/public/signup.html
@@ -45,8 +45,8 @@
           <li class="menu-text">Send Moods</li>
           <li>
             <ul class="menu">
-              <li><a href="#">Sign Up</a></li>
-              <li><a href="#">Log In</a></li>
+              <li><a href="login.html">Log In</a></li>
+              <li><a href="signup.html">Sign Up</a></li>
               
             </ul>
           </li>
